--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ django-debug-toolbar==3.2.*
 Pillow==9.*
 environs[django]==9.3.*
 django-phonenumber-field[phonenumberslite]==8.*
+djangorestframework==3.*
